[gd_scene load_steps=9 format=4 uid="uid://djyxv43t57pnf"]

[ext_resource type="Script" uid="uid://1ly0gbnh7ejf" path="res://Objects/battle_zone_teleporter.gd" id="1_2ac06"]
[ext_resource type="Texture2D" uid="uid://i8mt56nqukr5" path="res://Textures/Tilesets/tileset.png" id="1_h1dka"]
[ext_resource type="PackedScene" uid="uid://dpgmn2gntqjee" path="res://Utility/player_teleport.tscn" id="3_d60cv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6uypi"]
texture = ExtResource("1_h1dka")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_fkmlg"]
sources/0 = SubResource("TileSetAtlasSource_6uypi")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wf8hm"]
texture = ExtResource("1_h1dka")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_2b60x"]
physics_layer_0/collision_layer = 32
physics_layer_0/collision_mask = 32
sources/0 = SubResource("TileSetAtlasSource_wf8hm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bstf3"]
size = Vector2(32, 32)

[node name="BattleZoneTeleporter" type="Node2D" groups=["teleporter"]]
script = ExtResource("1_2ac06")

[node name="Texture" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="Texture"]
tile_map_data = PackedByteArray("AAD7//7/AAACAAAAAAD7////AAACAAAAAAD7/wAAAAACAAAAAAD7/wEAAAABAAAAAAD8//7/AAACAAAAAAD8////AAACAAAAAAD8/wAAAAACAAAAAAD8/wEAAAABAAAAAAD9//7/AAACAAAAAAD9////AAACAAAAAAD9/wAAAAACAAAAAAD9/wEAAAABAAAAAAD+//7/AAACAAAAAAD+////AAACAAAAAAD+/wAAAAACAAAAAAD+/wEAAAABAAAAAAD///7/AAACAAAAAAD/////AAAEAAAAAAD//wAAAAAEAAAAAAD//wEAAAABAAAAAAAAAP7/AAACAAAAAAAAAP//AAAEAAAAAAAAAAAAAAAEAAAAAAAAAAEAAAABAAAAAAABAP7/AAACAAAAAAABAP//AAACAAAAAAABAAAAAAACAAAAAAABAAEAAAABAAAAAAACAP7/AAACAAAAAAACAP//AAACAAAAAAACAAAAAAACAAAAAAACAAEAAAABAAAAAAADAP7/AAACAAAAAAADAP//AAACAAAAAAADAAAAAAACAAAAAAADAAEAAAABAAAAAAAEAP7/AAACAAAAAAAEAP//AAACAAAAAAAEAAAAAAACAAAAAAAEAAEAAAABAAAAAAA=")
tile_set = SubResource("TileSet_fkmlg")

[node name="Wall" type="TileMapLayer" parent="Texture"]
tile_map_data = PackedByteArray("AAD7/wEAAAADAAQAAAD7/wAAAAADAAQAAAD7////AAADAAQAAAD7//7/AAADAAQAAAD7//3/AAADAAQAAAD7//z/AAADAAQAAAD7//v/AAADAAQAAAD7//r/AAADAAQAAAD7//n/AAADAAQAAAAEAAEAAAADAAQAAAAEAAAAAAADAAQAAAAEAP//AAADAAQAAAAEAP7/AAADAAQAAAAEAP3/AAADAAQAAAAEAPz/AAADAAQAAAAEAPv/AAADAAQAAAAEAPr/AAADAAQAAAAEAPn/AAADAAQAAAA=")
tile_set = SubResource("TileSet_2b60x")

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("RectangleShape2D_bstf3")

[node name="PlayerTeleport" parent="." instance=ExtResource("3_d60cv")]

[node name="Departure" type="Node2D" parent="."]
position = Vector2(0, -544)

[node name="EnableTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2, -39)
scale = Vector2(8, 7.3)

[connection signal="tp_to_dest1" from="." to="PlayerTeleport" method="_on_battle_zone_teleporter_tp_to_dest_1"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="timeout" from="EnableTimer" to="." method="_on_enable_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
